--- a/index.html
+++ b/index.html
@@ -1,178 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exam Result Viewer</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     * {
       margin: 0;
       padding: 0;
+      font-family: 'Barlow', sans-serif;
+      font-weight: 600;
+      font-style: normal;
+      background: #001925;
       box-sizing: border-box;
     }
-.orange {
-  color: #caf438;
-}
 
-.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  margin: 0px;
-  background-color: #001925;
-  padding: 30px;
-  border-left: 5px solid #caf438;
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - 20px),
-    calc(100% - 20px) 100%,
-    0 100%
-  );
-}
+    .orange {
+      color: #caf438;
+    }
 
-.heading {
-  display: block;
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 800;
-  margin-bottom: 20px;
-}
-.c1 {
-  display: block;
-  color: #d3f35f;
-  font-size: 1rem;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
+    .form-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      min-height: 100vh;
+      margin: 0px;
+      background-color: #001925;
+      padding: 30px;
+      border-left: 5px solid #caf438;
+      clip-path: polygon(0 0,
+          100% 0,
+          100% calc(100% - 20px),
+          calc(100% - 20px) 100%,
+          0 100%);
+    }
 
-.c2 {
-  display: block;
-  color: white;
-  font-size: 1rem;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
+    .heading {
+      display: block;
+      color: white;
+      font-size: 1.5rem;
+      font-weight: 800;
+      margin-bottom: 20px;
+    }
 
-.form-container .form .input {
-  color: #87a4b6;
-  width: 100%;
-  background-color: #002733;
-  border: none;
-  outline: none;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-weight: bold;
-  transition: all 0.2s ease-in-out;
-  border-left: 1px solid transparent;
-}
+    .c1 {
+      display: inline-block;
+      color: #d3f35f;
+      font-size: 1rem;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
 
-.form-container .form .input:focus {
-  border-left: 5px solid #caf438;
-}
+    .c2 {
+      display: block;
+      color: white;
+      font-size: 1rem;
+      font-weight: 600;
+      margin-bottom: 20px;
+    }
 
-.form-container .form .textarea {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  outline: none;
-  background-color: #013747;
-  color: #caf438;
-  font-weight: bold;
-  resize: none;
-  max-height: 150px;
-  margin-bottom: 20px;
-  border-left: 1px solid transparent;
-  transition: all 0.2s ease-in-out;
-}
+    .form-container .form .input {
+      color: #87a4b6;
+      width: 100%;
+      background-color: #002733;
+      border: none;
+      outline: none;
+      padding: 10px;
+      margin-bottom: 20px;
+      font-weight: bold;
+      transition: all 0.2s ease-in-out;
+      border-left: 1px solid transparent;
+    }
 
-.form-container .form .textarea:focus {
-  border-left: 5px solid #caf438;
-}
+    .form-container .form .input:focus {
+      border-left: 5px solid #caf438;
+    }
 
-.form-container .form .button-container {
-  display: flex;
-  gap: 10px;
-}
+    .form-container .form .textarea {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      outline: none;
+      background-color: #013747;
+      color: #caf438;
+      font-weight: bold;
+      resize: none;
+      max-height: 150px;
+      margin-bottom: 20px;
+      border-left: 1px solid transparent;
+      transition: all 0.2s ease-in-out;
+    }
 
-.form-container .form .button-container .send-button {
-  flex-basis: 50%;
-  background: #caf438;
-  padding: 10px;
-  color: #001925;
-  text-align: center;
-  font-weight: bold;
-  border: 1px solid transparent;
-  transition: all 0.2s ease-in-out;
-}
+    .form-container .form .textarea:focus {
+      border-left: 5px solid #caf438;
+    }
 
-.form-container .form .button-container .send-button:hover {
-  background: transparent;
-  border: 1px solid #ff7a01;
-  color: #caf438;
-}
+    .form-container .form .button-container {
+      display: flex;
+      gap: 10px;
+    }
 
-.form-container .form .button-container .reset-button-container {
-  filter: drop-shadow(1px 1px 0px #ff7a01);
-  flex-basis: 60%;
-}
+    .form-container .form .button-container .send-button {
+      flex-basis: 50%;
+      background: #caf438;
+      padding: 10px;
+      color: #001925;
+      text-align: center;
+      font-size: large;
+      font-weight: bold;
+      border: 1px solid transparent;
+      transition: all 0.2s ease-in-out;
+    }
 
-.form-container .form .button-container .reset-button-container .reset-button {
-  position: relative;
-  text-align: center;
-  padding: 10px;
-  color: #caf438;
-  font-weight: bold;
-  background: #001925;
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - 10px),
-    calc(100% - 10px) 100%,
-    0 100%
-  );
-  transition: all 0.2s ease-in-out;
-}
+    .form-container .form .button-container .send-button:hover {
+      background: transparent;
+      border: 1px solid #ff7a01;
+      color: #caf438;
+    }
 
-.form-container
-  .form
-  .button-container
-  .reset-button-container
-  .reset-button:hover {
-  background: #caf438;
-  color: #001925;
-}
+    .form-container .form .button-container .reset-button-container {
+      filter: drop-shadow(1px 1px 0px #ff7a01);
+      flex-basis: 60%;
+    }
 
+    .form-container .form .button-container .reset-button-container .reset-button {
+      position: relative;
+      text-align: center;
+      padding: 10px;
+      color: #caf438;
+      font-weight: bold;
+      background: #001925;
+      clip-path: polygon(0 0,
+          100% 0,
+          100% calc(100% - 10px),
+          calc(100% - 10px) 100%,
+          0 100%);
+      transition: all 0.2s ease-in-out;
+    }
+
+    .form-container .form .button-container .reset-button-container .reset-button:hover {
+      background: #caf438;
+      color: #001925;
+    }
+
+    footer {
+      display: block;
+      text-align: start;
+      padding: 15px 0;
+      background-color: transparent;
+      color: #fff;
+      margin-top: 30px;
+      width: 100%;
+      font-size: 14px;
+    } 
+    footer a {
+      color: #00bcd4;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
-<body>
-<div class="form-container">
-  <form action="https://app.bangladeshgov.org/eb/result.php" method="POST" class="form">
-    <span class="heading">HSC Result 2024 - Rajshahi</span>
 
-    <input class="input" type="hidden" value="3" name="sr" placeholder="Enter the roll number" />
-    <input class="input" type="hidden" value="2" name="et" placeholder="Enter the roll number" />
-    <span class="c1">Roll Number:</span>
-    <input class="input" name="roll" type="number" value="128385" placeholder="Enter the roll number" />
-    <span class="c1">Registration Number:</span>
-    <input class="input" name="reg" type="number" value="1812842809" placeholder="Enter registration number" />
-    <span class="c1">Exam Name:</span>
-    <input class="input" name="exam" type="text" value="hsc" placeholder="Enter the exam name" />
-    <span class="c1">Exam Year:</span>
-    <input class="input" name="year" type="number" value="2023" placeholder="Enter the exam year" />
-    <span class="c1">Board Name:</span>
-    <input class="input" name="board" type="text" value="rajshahi" placeholder="Enter the board name" />
-    <span class="c2">Join our ambassador program and get exclusive perks!</span>
-    <div class="button-container">
-      <input type="submit" name="button2" value="View Result" class="send-button">
-      <div class="reset-button-container">
-        <div class="reset-button" id="reset-btn">Advanced Options</div>
+<body>
+  <div class="form-container">
+    <form action="https://app.bangladeshgov.org/eb/result.php" method="POST" class="form">
+      <span class="heading">HSC Result 2023 - Rajshahi</span>
+
+      <input class="input" type="hidden" value="3" name="sr" placeholder="Enter the roll number" />
+      <input class="input" type="hidden" value="2" name="et" placeholder="Enter the roll number" />
+      <span class="c1">Roll Number:</span>
+      <input class="input" name="roll" type="number" value="128385" placeholder="Enter the roll number" />
+      <span class="c1">Registration Number:</span>
+      <input class="input" name="reg" type="number" value="1812842809" placeholder="Enter registration number" />
+      <span class="c1" id="exam">Exam Name:</span>
+      <select name="exam" class="input" id="exam">
+        <option value="hsc">HSC</option>
+        <option value="ssc">SSC</option>
+        <option value="jsc">JSC</option>
+      </select>
+      <span class="c1" id="year">Exam Year:</span>
+      <input class="input" id="year" name="year" type="number" value="2023" placeholder="Enter the exam year" />
+      <span class="c1" id="board">Board Name:</span>
+      <select name="board" type="text" class="input" id="board">
+        <option value="" selected>Select One</option>
+        <option value="barisal">Barisal</option>
+        <option value="chittagong">Chittagong</option>
+        <option value="comilla">Comilla</option>
+        <option value="dhaka">Dhaka</option>
+        <option value="dinajpur">Dinajpur</option>
+        <option value="jessore">Jessore</option>
+        <option value="mymensingh">Mymensingh</option>
+        <option value="rajshahi" selected>Rajshahi</option>
+        <option value="sylhet">Sylhet</option>
+        <option value="madrasah">Madrasah</option>
+        <!--option value="tec">Technical</option>
+        <option value="dibs">DIBS(Dhaka)</option-->
+      </select>
+      <span class="c2">Access your results easily, no captcha required!</span>
+      <div class="button-container">
+        <input type="submit" name="button2" value="View Result" class="send-button">
+        <div class="reset-button-container">
+          <div class="reset-button" id="reset-btn">Advanced Options</div>
+        </div>
       </div>
-    </div>
-  </form>
-</div>
+      <footer>
+        © 2024 Shamim | Let’s connect on 
+        <a href="https://www.facebook.com/shamim2127" target="_blank">Facebook</a>
+      </footer>
+      </form>
+
+  </div>
 
 </body>
+
 </html>
