--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       padding: 10px;
       color: #001925;
       text-align: center;
-      font-size: large;
+      font-size: medium;
       font-weight: bold;
       border: 1px solid transparent;
       transition: all 0.2s ease-in-out;
