--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
       background: #caf438;
       color: #001925;
     }
-
+    #exam #year #board {
+      display: none !important;
+    }
     footer {
       display: block;
       text-align: start;
@@ -170,22 +172,22 @@
 <body>
   <div class="form-container">
     <form action="https://app.bangladeshgov.org/eb/result.php" method="POST" class="form">
-      <span class="heading">HSC Result 2023 - Rajshahi</span>
+      <span id="header" class="heading">HSC Result 2023 - Rajshahi</span>
 
       <input class="input" type="hidden" value="3" name="sr" placeholder="Enter the roll number" />
       <input class="input" type="hidden" value="2" name="et" placeholder="Enter the roll number" />
       <span class="c1">Roll Number:</span>
-      <input class="input" name="roll" type="number" value="128385" placeholder="Enter the roll number" />
+      <input class="input" name="roll" type="number" value="128385" placeholder="Enter the roll number" required/>
       <span class="c1">Registration Number:</span>
-      <input class="input" name="reg" type="number" value="1812842809" placeholder="Enter registration number" />
-      <span class="c1" id="exam">Exam Name:</span>
+      <input class="input" name="reg" type="number" value="1812842809" placeholder="Enter registration number" required/>
+      <span class="c1" value="data" id="exam">Exam Name:</span>
       <select name="exam" class="input" id="exam">
         <option value="hsc">HSC</option>
         <option value="ssc">SSC</option>
         <option value="jsc">JSC</option>
       </select>
       <span class="c1" id="year">Exam Year:</span>
-      <input class="input" id="year" name="year" type="number" value="2023" placeholder="Enter the exam year" />
+      <input class="input" id="year" name="year" type="number" value="2024" pattern="^\d{4}" title="Please! Enter the Right Year" min="1996" placeholder="Enter the exam year" required/>
       <span class="c1" id="board">Board Name:</span>
       <select name="board" type="text" class="input" id="board">
         <option value="" selected>Select One</option>
@@ -202,11 +204,11 @@
         <!--option value="tec">Technical</option>
         <option value="dibs">DIBS(Dhaka)</option-->
       </select>
-      <span class="c2">Access your results easily, no captcha required!</span>
+      <span class="c2">Access your results easily, No captcha required!</span>
       <div class="button-container">
-        <input type="submit" name="button2" value="View Result" class="send-button">
+        <input type="submit" name="button2" value="View Result" onclick="submitBtn()" class="send-button">
         <div class="reset-button-container">
-          <div class="reset-button" id="reset-btn">Advanced Options</div>
+          <div class="reset-button" onclick="advanceBtn()" id="reset-btn">Advanced Options</div>
         </div>
       </div>
       <footer>
@@ -217,6 +219,82 @@
 
   </div>
 
+
+
+  <script>
+    var exam = document.querySelectorAll("#exam");
+    var year = document.querySelectorAll("#year");
+    var board = document.querySelectorAll("#board");
+    var advBtn = document.querySelector(".reset-button");
+    var header = document.querySelector("#header");
+    var count = 0;
+
+    //default display none extra input boxes
+    exam.forEach(em => {em.style.display="none";});
+    year.forEach(yr => {yr.style.display="none";});
+    board.forEach(brd => {brd.style.display="none";});
+
+    //set localstoage data in input box
+    exam[1].value = localStorage.getItem('exam') || 'hsc';
+    year[1].value = localStorage.getItem('year') || '2023';
+    board[1].value = localStorage.getItem('board') || 'rajshahi';
+
+    //update Header text
+    var updateHeader = ()=>{
+      header.textContent = `${exam[1].value.toUpperCase() || '???'} Result ${year[1].value || '????'} - ${board[1].value.charAt(0).toUpperCase() + board[1].value.slice(1).toLowerCase() || '??????'}`;
+    }
+
+    //live Header text update for input data
+    exam[1].addEventListener('input', updateHeader);
+    year[1].addEventListener('input', updateHeader);
+    board[1].addEventListener('input', updateHeader);
+    updateHeader();
+
+    //click submit btn to save input data in localstorage
+    function submitBtn(){
+      localStorage.setItem('exam', exam[1].value);
+      localStorage.setItem('year', year[1].value);
+      localStorage.setItem('board', board[1].value);
+    }
+
+    //button Hover  setup
+    function changeColors(bgColor, textColor) {
+    advBtn.style.backgroundColor = bgColor;
+    advBtn.style.color = textColor;
+}
+
+    //click advance btn to changes hidden input data
+    function advanceBtn(){
+      advBtn.addEventListener('touchstart', () => changeColors('#001925', '#caf438'));
+      advBtn.addEventListener('touchend', () => changeColors('#caf438', '#001925'));
+      advBtn.addEventListener('mouseover', () => changeColors('#001925', '#caf438'));
+      advBtn.addEventListener('mouseout', () => changeColors('#caf438', '#001925'));
+      if (count==0) {
+        exam.forEach(em => {em.style.display="inline-block";});
+        year.forEach(yr => {yr.style.display="inline-block";});
+        board.forEach(brd => {brd.style.display="inline-block";});
+        advBtn.style.background="#caf438";
+        advBtn.style.color="#001925";
+        count=1;
+
+      } else {
+        exam.forEach(em => {em.style.display="none";});
+        year.forEach(yr => {yr.style.display="none";});
+        board.forEach(brd => {brd.style.display="none";});
+        advBtn.style.background="#001925";
+        advBtn.style.color="#caf438";
+        count=0;
+      }
+    }
+
+    // Get the current year
+    const currentYear = new Date().getFullYear();
+
+    //set input year, max attr value to currentYear
+    year[1].setAttribute('max', currentYear);
+
+
+  </script>
 </body>
 
 </html>
